# ChangeLog for dev-perl/Unicode-EastAsianWidth
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Unicode-EastAsianWidth/ChangeLog,v 1.36 2014/01/25 10:35:05 zlogene Exp $

  25 Jan 2014; Mikle Kolyada <zlogene@gentoo.org>
  Unicode-EastAsianWidth-1.330.0.ebuild:
  ppc64 stable wrt bug #449622

  25 Jan 2014; Mikle Kolyada <zlogene@gentoo.org>
  Unicode-EastAsianWidth-1.330.0.ebuild:
  ia64 stable wrt bug #449622

  25 Jan 2014; Mikle Kolyada <zlogene@gentoo.org>
  Unicode-EastAsianWidth-1.330.0.ebuild:
  x86 stable wrt bug #449622

  25 Jan 2014; Mikle Kolyada <zlogene@gentoo.org>
  Unicode-EastAsianWidth-1.330.0.ebuild:
  amd64 stable wrt bug #449622

  25 Jan 2014; Mikle Kolyada <zlogene@gentoo.org>
  Unicode-EastAsianWidth-1.330.0.ebuild:
  alpha stable wrt bug #449622

  21 Jan 2014; Markus Meier <maekke@gentoo.org>
  Unicode-EastAsianWidth-1.330.0.ebuild:
  arm stable, bug #449622

  20 Jan 2014; Agostino Sarubbo <ago@gentoo.org>
  Unicode-EastAsianWidth-1.330.0.ebuild:
  Stable for ppc, wrt bug #449622

  20 Jan 2014; Jeroen Roovers <jer@gentoo.org>
  Unicode-EastAsianWidth-1.330.0.ebuild:
  Stable for HPPA (bug #449622).

  19 Jan 2014; Mike Frysinger <vapier@gentoo.org>
  Unicode-EastAsianWidth-1.320.0.ebuild, Unicode-EastAsianWidth-1.330.0.ebuild:
  Add arm64 love.

  07 Feb 2013; Ulrich Müller <ulm@gentoo.org>
  Unicode-EastAsianWidth-1.320.0.ebuild, Unicode-EastAsianWidth-1.330.0.ebuild:
  Move Creative Commons licenses to shorter names.

  06 Jan 2013; Torsten Veller <tove@gentoo.org>
  -Unicode-EastAsianWidth-1.30.ebuild:
  Cleanup

*Unicode-EastAsianWidth-1.330.0 (03 Nov 2012)

  03 Nov 2012; Torsten Veller <tove@gentoo.org>
  +Unicode-EastAsianWidth-1.330.0.ebuild:
  Version bump

  02 Sep 2012; Raúl Porcel <armin76@gentoo.org>
  Unicode-EastAsianWidth-1.320.0.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #422053

  11 Aug 2012; Markus Meier <maekke@gentoo.org>