@@ -1,18 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST Unicode-EastAsianWidth-1.32.tar.gz 29138 SHA256 a7c13dc91087357e10ffde81ff4d5a411b10cc9ae7b7195e376ac52ded8190ab SHA512 882eef20313febf87235b861b9550bc6be79925725787c89c724895af5eadd75c19adcf61ae886a4dbe1d26da93b63d8e42389f40fb748b662e8cbce328577ec WHIRLPOOL b2941c598ba7a54f9f416a8ed79fb9237381dc0579ccc51cac60f53ac49b962274894856f886273d0e524679005a975c7a2bde18af05707e7a291be8501f7fda
 DIST Unicode-EastAsianWidth-1.33.tar.gz 31498 SHA256 41c9f0b50c45dd806a97de73f9fe93516b6c63255e2a5174e5fb2d89635c7797 SHA512 c21e988f460534b370954d0448daec5bfb0a34ec816459f8422943ebe44ff17b5acb8a423d69daba81599111d7fa4aa33a3598e0ea4614eed25a587c1f5690eb WHIRLPOOL 5376518d63b9a2dbfaa3c8e4714994375dd5f59df440c30ed7e84eedcc9a9c6728dc4d6c2726e20593384a5534ed7894ab6666996e0b2e1358c033e46409b9ff
-EBUILD Unicode-EastAsianWidth-1.320.0.ebuild 727 SHA256 5c259dd4ea43a5fdd091790574456cdf9fd9a4e84ee037a7bde8b42b392a7cdf SHA512 5e57c0bdd78be20b7bca989f2444cb79db08c6aca475f563f9651c04f0756d721a166cbc0278f6734ae45813bd814097c4cc7e950b5e601b7a9c002118e48a8c WHIRLPOOL 2182e76e005d426c5fa39ae32a96d163d1b7fb331843df5432ca8a79e904a7cc9683fca551d224c28403e91af3e331e5e3afd14c8cbd1eeea170af0891588503
-EBUILD Unicode-EastAsianWidth-1.330.0.ebuild 732 SHA256 bfd8b8a619cedc1e71560894f17595ff4b318065b4f45f8dc2c358641cf35a36 SHA512 61beef2295579673e4bbd56d5dca988c560702cb26c036936cafec330bebc53aa72717f598bd182fe203ad97868e3b9826dc1e6bb80231a6299dd78a13fcdb74 WHIRLPOOL 3bdb493cf1823a9a9e828f1cbc60e2f85ae90080e01e079d9e98a802b1a260df8da6d214b63a5824abd0de8e56a936a4148a7f2d7fe3a0293890684e0e547dfa
-MISC ChangeLog 5021 SHA256 2bba845992293d7fda3ef0c691ea8c915df0313f638485003b40cb0f5e7a7217 SHA512 b4d3aec2dc8a8f74384b0f977aed9920d22b493957a33a0f60f7f0d0f2d952fc50cd4c6e0e55b3e3961e9a1c5f2145873af6881fc5a97db5c2d005b8d7395eb0 WHIRLPOOL 848757562ddf93f50d7860a959d73b1987cd4d1a373a569ed8369d9dc376201aa5ee0ae2b15eeb228ab2026eb74cdcf63e7e1e29a183dae391f0ca7945f3fb97
+EBUILD Unicode-EastAsianWidth-1.330.0.ebuild 731 SHA256 b9ff19497967623bd9f9671bd43ff0836cc1a43014fd334c3ccfae1709a29808 SHA512 734488890e2f78b04615a563d4432680c190e83faed2f1a29ab5d0d953dbfbb62ca13dbf0f15e022a750f6ea887ed80e5b1475f9f4126f6b44f64e71685c12e8 WHIRLPOOL ed6a681d5cc94a2d58a6b296fc7d20f7ea3e9365dfd0db27da05b8beebc439d4c69fd5fb0774dcd4793245a42702f780bacb4de46ac97a4958e2ab05865abc0e
+MISC ChangeLog 5195 SHA256 0a2bd1698bab67c7925c79ffb96d4ca46800edd739d4a38f39277e06bd6919c3 SHA512 db4d45188c1cf94d297fb5aa41b54143842fbabfc8e519719656157bfc015487be4c4e134a169bc19cf1a6307de053cff0bcd3dc0c3d6f97fa731c2a67df1086 WHIRLPOOL c276cdd1a91a53b0a3fb87dcc843d6d23adfcdbd6dea444b5b337c010be0cfac60ccc4b6e75e2913e4a2d7f518faa74550d11213c1860a083012fc93d7578813
 MISC metadata.xml 311 SHA256 121adf0550d48b13d55fee062218e19dd52a218e0baffa9cdd9e850c62777351 SHA512 288e84eafb3927a557a4eaadc071b9932ae46381c0be767240f0b50e8791d7bc03f27a4630a11e575a12e13d161e1c321cd0550d29d1a5b8613f0aa80a6b8a9b WHIRLPOOL 95a8381791eb722e1d3370e01c2c3795402eb383effcebe0889e1bc6e4f48ad2daef8c6bd007e258e60acb4aef25821c29eeafa9103babb0e0b1181777b15835
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iJwEAQEIAAYFAlLjlLkACgkQG9wOWsQutdaODwP/X1ImDJb9QQnNF5AvG1qYUaf2
-hF6Z7qCxeE7EGzuIX3QaA8jaiKV5wvXf85MbrXEN7163cug+qdmaGWqOTM3liaVE
-t7CiVIsSwP7m/lCNqyDsX3/V1+4iJljfDtITS7xux/bP5WfOm8NamtbwkSRbKPVV
-8h3MaebQCq1os/Wy6MU=
-=JlhP
+iJwEAQEIAAYFAlLjlzYACgkQG9wOWsQutdas3AP8DH6Tzg4ZBc264JQ2hI5adgJ6
+Kjje4RZqweB2w4u1YGshqB64eQZDX97L49IPPUCo+jx4udK/UYjtK+XqbzdJ9tU7
+7gLEzyM5FsjoAzc8jzNt8OatqpJmQPlSjurkwIAIQmZ53ecX6hyMfk536CEaQLyl
+GnuVq+U3MAUhnTHhSvk=
+=PZ57
 -----END PGP SIGNATURE-----
