@@ -1,22 +1,0 @@
-# Copyright 1999-2014 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Unicode-EastAsianWidth/Unicode-EastAsianWidth-1.320.0.ebuild,v 1.11 2014/01/19 21:09:29 vapier Exp $
-
-EAPI=4
-
-MODULE_AUTHOR=AUDREYT
-MODULE_VERSION=1.32
-inherit perl-module
-
-DESCRIPTION="East Asian Width properties"
-
-LICENSE="CC0-1.0"
-SLOT="0"
-KEYWORDS="alpha amd64 arm arm64 hppa ia64 ~mips ppc ppc64 s390 sh sparc x86 ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris"
-IUSE=""
-
-RDEPEND="virtual/perl-File-Spec"
-DEPEND="${RDEPEND}
-	virtual/perl-ExtUtils-MakeMaker"
-
-SRC_TEST="do"
